# dicetrace-99

./: .dockerignore  .log4brains.yml  Cargo.toml  cargo.toml  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.github/workflows/: ci.yaml  publish_docker_image.yaml
api/onboarding/: handler.ts
apps/bgg-proxy/: .air.toml  Dockerfile  go.mod  go.sum  main.go  package.json
apps/bgg-proxy/tools/: tools.go
apps/docs/: docusaurus.config.js  package.json
apps/social/: Cargo.toml  docker-compose.yaml  package.json
apps/social/migrations/: 20230712195548_groups_table.sql  20230712195759_group_members_table.sql
apps/social/src/: group_handler.rs  main.rs
apps/userdata/: Cargo.toml  build.rs  docker-compose.yaml  package.json  railway.toml
apps/userdata/migrations/: 20230707081227_create_user_table.sql  20230707081227_user_table.sql  20230707081227_users_table.sql  20230710113453_users_bgg_username_added.sql
apps/userdata/src/: db.rs  error_handler.rs  main.rs  responses.rs  user_handler.rs
apps/web/: .gitignore  package.json  playwright.config.ts  pnpm-lock.yaml  sentry.properties  svelte.config.js  vercel.json  vite.config.ts
apps/web/src/: app.d.ts  app.html  hooks.client.ts  hooks.server.ts
apps/web/tests/: pageTitle.spec.ts
docker/: Dockerfile.adr  Dockerfile.bgg-proxy  Dockerfile.userdata
docs/adr/: 20230708-use-log4brains-to-manage-the-adrs.md  20230708-use-markdown-architectural-decision-records.md  index.md
functions/bgg/: go.mod  go.sum  index.html
functions/user/: Cargo.toml
(+26 files in other folders)
