[package]
name = "userdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
dotenv = "0.15.0"
sqlx = { version = "0.7", features = ["mysql", "macros", "migrate", "runtime-tokio", "tls-rustls" ] }
http-api-problem = { version = "0.57.0", features = [ "rocket-okapi" ]}
rs-id-gen = { path = "../../packages/rs-id-gen" }
rs-models = { path = "../../packages/rs-models" }
rs-rocket-cors = { path = "../../packages/rs-rocket-cors" }
rs-rocket-catcher = { path = "../../packages/rs-rocket-catcher" }
tracing-log = "0.1.3"
log = "0.4.19"
